tests/miz/pass/parser/pass_parser_selector_updates_001.miz
import parser.type_fixtures;
reserve x for T of p.x, line.finish.y, M.binop(a, b), p with (x := y, start.x := f(a));
